# simple-state-machine

./: .travis.yml  CMakeLists.txt  build_arduino.sh  ci.sh  library.json  run_tests.sh  test.sh
cmake-fetch-content/: .gitrepo
examples/blinky/: blinky.ino
src/: state-manager.h
tests/: simple-test.cpp
